// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Snapshot tests renders default Checkbox as expected 1`] = `
<div>
  <div
    class="usa-checkbox"
  >
    <input
      class="usa-checkbox__input"
      id="check-default"
      name="test-checkbox"
      type="checkbox"
      value="default-checkbox"
    />
    <label
      class="usa-checkbox__label"
      for="check-default"
    >
      Default Checkbox
    </label>
  </div>
</div>
`;

exports[`Checkbox Snapshot tests renders tile Checkbox as expected 1`] = `
<div>
  <div
    class="usa-checkbox"
  >
    <input
      class="usa-checkbox__input usa-checkbox__input--tile"
      id="check-tile"
      name="test-checkbox"
      type="checkbox"
      value="tile-checkbox"
    />
    <label
      class="usa-checkbox__label"
      for="check-tile"
    >
      Tile Checkbox
      <span
        class="usa-checkbox__label-description"
      >
        This is the tile description.
      </span>
    </label>
  </div>
</div>
`;
